--- a/tcpServer/Makefile
+++ b/tcpServer/Makefile
@@ -1,3 +1,3 @@
 server:server.cpp
-	g++ server.cpp -o server -lpthread -I /home/code/TCP_File_Transfer
+	g++ server1.cpp -o server -lpthread -I /home/code/TCP_File_Transfer
 	
