--- a/tcpServer/Makefile
+++ b/tcpServer/Makefile
@@ -1,3 +1,3 @@
-server1:server1.cpp
-	g++ server1.cpp -o server -lpthread -I /home/code/TCP_File_Transfer
+server:server.cpp
+	g++ -o server server.cpp server_trans_controller.cpp reader/data_reader.cpp reader/remote_data_reader.cpp reader/session.cpp writer/data_writer.cpp writer/file_data_writer.cpp -I reader -I writer -I .. -lpthread
 	
