--- a/tcpClient/Makefile
+++ b/tcpClient/Makefile
@@ -1,2 +1,6 @@
-client:
-	g++ -o client client.cpp client_trans_controller.cpp inputer/cin_data_inputer.cpp inputer/data_inputer.cpp reader/data_reader.cpp reader/file_data_reader.cpp writer/data_writer.cpp writer/remote_data_writer.cpp writer/session.cpp -I inputer -I reader -I writer -I ..
+client:client.cpp
+	g++ -o client client.cpp ../controller/client_trans_controller.cpp \
+	../inputer/cin_data_inputer.cpp ../inputer/data_inputer.cpp \
+	../reader/data_reader.cpp ../reader/file_data_reader.cpp \
+	../writer/data_writer.cpp ../writer/remote_data_writer.cpp ../session/client_session.cpp \
+	-I ../controller -I ../inputer -I ../reader -I ../writer -I ../session
