--- a/tcpServer/Makefile
+++ b/tcpServer/Makefile
@@ -4,4 +4,4 @@ server:server.cpp
 	../reader/data_reader.cpp ../reader/remote_data_reader.cpp \
 	../writer/data_writer.cpp ../writer/file_data_writer.cpp \
 	../session/server_session.cpp ../session/io_session.cpp \
-	-I ../controller -I ../inputer -I ../reader -I ../writer -I ../session
+	-I ../controller -I ../inputer -I ../reader -I ../writer -I ../session -lpthread
